fix mobile viewer

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -56,6 +56,16 @@ style.
      =========================== */
 
 
+  /** everything 650 and bellow */
+  @media (max-width: 667px) {
+    /*input[name="searchValue"] {*/
+    /*display: none;*/
+    /*}*/
+    .plyr {
+      max-height: 625px;
+    }
+  }
+
 
   /** post button starts to hit search bar **/
   @media (max-width: 753px){
