--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -312,11 +312,19 @@ style.
         }
     }
 
+    /** everything 650 and bellow */
+    @media (min-width: 668px) {
+        /*input[name="searchValue"] {*/
+        /*display: none;*/
+        /*}*/
+        .plyr {
+            height: 625px;
+        }
+    }
 
 
     .plyr.plyr--video {
         resize: both;
-        height: 625px;
 
         /*0.2*/
         /*max-width: 97.5vw;*/
