about to fix navbar

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -121,7 +121,7 @@ style.
       display: none;
     }
 
-    .searchPlaceHolder {
+    .searchPlaceHolder, .uploadButton {
       display: block !important;
     }
 
@@ -336,7 +336,7 @@ style.
 
       a(href="/upload" style="position: absolute;top: 13px;right: 79px;")
         div.postIcon
-          i.fas.fa-upload.uploadButton(style="top: 11px;right: -6px;")
+          i.fas.fa-upload.uploadButton(style="top: 11px;right: -6px;display:none;")
 
         //div.postIcon(style="display:none;" data-toggle='modal', data-target='#exampleModal')
         //  img(src="/images/whiteDollarIcon.png" style="width:25px;margin-top:9px;")
