fix progress bar

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -231,16 +231,16 @@ style.
     z-index: 1
   }
 
-  button i {
+  .search-uploads-button i {
     opacity: .5;
     transition: all .07s ease-in-out
   }
 
-  button:hover i {
+  .search-uploads-button:hover i {
     opacity: .95
   }
 
-  button:hover {
+  .search-uploads-button:hover {
     background-color: #E4E4E4;
     box-shadow: 0 1px 1px rgba(0, 0, 0, .15),
     inset 0 0 2px rgba(0, 0, 0, .05);
