--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -173,7 +173,7 @@ block content
 
     include ../viewPartials/changeSensitivityFilterJs
 
-    script.
-      balanceText();
+    //script.
+    //  balanceText();
 
     include ../viewPartials/mouseOverJavascript
