--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -379,3 +379,14 @@ style.
     .editFileButtons {
         margin-top: 30px;
     }
+
+    /* anything below this width */
+    @media (min-width: 1250px) {
+        body {
+            zoom: 1.15;
+        }
+
+        /*.postButton {*/
+        /*display: none !important;*/
+        /*}*/
+    }
