add signup button

--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -226,6 +226,11 @@ style.
             i.fa.fa-sign-in(aria-hidden='true')
             p.ib &nbsp Sign In &nbsp
 
+        // user needs to login
+        a(href='/signup' style="color:#007bff;")
+            i.fa.fa-user-plus(aria-hidden='true')
+            p.ib &nbsp Sign Up &nbsp
+
         hr(style="margin-top:0px")
 
 
