--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -84,6 +84,7 @@ style.
 
   /* when plus button starts to hit search bar */
   @media (max-width: 593px) {
+
     .fullTitle {
       display: none !important;
     }
@@ -108,6 +109,7 @@ style.
   }
 
   /* when plus button starts to hit search bar */
+  /* everything under 439px  */
   @media (max-width: 439px) {
     .fullTitle {
       display: none !important;
@@ -344,13 +346,18 @@ style.
 script.
 
   $(document).ready(function () {
+
+    // whatever search expander is
     $('.searchExpander').click(function () {
       console.log('something')
+
+
+      // show the back button
       $('.backButtonIcon').css({
         display: 'block'
       });
 
-      // hide single letter
+      // hide single letter (now just says newtube)
       var elem = $('.singleLetter');
       elem[0].style.removeProperty('display');
       elem[0].style.setProperty('display', 'none', 'important');
@@ -361,15 +368,22 @@ script.
       elem2[0].style.removeProperty('display');
       elem2[0].style.setProperty('display', 'inline', 'important');
 
+      // post icon probably now upload button
       var elem1 = $('.postIcon');
       if(elem1[0]){
         elem1[0].style.removeProperty('display');
         elem1[0].style.setProperty('display', 'none', 'important');
       }
 
+      // shwo the search bar again
       $('.search-bar, .search-form').css({
         display: 'inline'
       });
+
+      $('.search-query-input').css({
+        'margin-left' : '-61px'
+      });
+
 
       $('.hamburgerDropdown, .userImage, .searchExpanderButton').css({
         display: 'none'
