fix photo only one file allowed

--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -98,7 +98,7 @@ block content
 
 
                   div#dropTarget(style="")
-                    img(src="/images/filedropdown.png" style="width:350px;")
+                    img(src="/images/fixed.png" style="width:350px;")
                   br
                   br
 
