--- a/views/media.pug
+++ b/views/media.pug
@@ -113,17 +113,43 @@ block content
 
 
 
+        // TODO: FIX NON-PLAYER CONTENT
         // todo: pull this out into its own include
         //- NON PLAYER CONTENT
             hello something
         div.non-player-content(style="position:relative;max-width:1451px;margin:0 auto;")
             // add margin-top 120 on margin-top:120px;"
 
+
+
             br
             br
-            // Upload Title
-            div.col-sm-8
+            // UPLOAD TITLE
+            div.col-sm-12
                 h2.balance-text(class="upload-title-value" style="text-wrap:balance;width:80%;margin:0 auto;font-weight:300;color: rgb(121 119 119) !important;")=upload.title
+
+                //REACTS WITH LIKES, DISLIKE, DISGUST, ETC
+                div.col-sm-12.react(style="background-color:white;margin:0 auto;border-radius:10px;margin-bottom:21px;margin-top:60px;padding-bottom:12px;min-width:247px;")
+                    // margin-top:133px
+                    br
+                    each emoji in emojis
+                        div(style="padding-right:15px;display:inline-block;")
+                            a(href="#")
+                                if currentReact
+                                    if currentReact == emoji.name
+                                        div.clicked-emoji
+                                            img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
+
+                                    else
+                                        div.unclicked-emoji
+                                            img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
+
+                                else
+                                    div.clicked-emoji
+                                        img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
+
+                            p.fw(class=emoji.name style="font-weight:400;") #{emoji.amount}
+
 
                 if upload.visibility == 'pending' && upload.status !== 'processing'
                     h3.pending-string Your video is currently pending moderator approval. If it's still pending after several minutes please contact a mod at
@@ -151,6 +177,27 @@ block content
                 div.change-size-button(style="cursor:pointer;margin-left:0px;color: rgb(121 119 119) !important;")
                     h2.report-button(style="")
                         i.share-icon.fa.fa-exclamation-triangle(aria-hidden="true" style="cursor:pointer;font-size:19px;")
+
+                // SHARING BUTTONS
+                div
+
+                    a(href=`https://www.facebook.com/sharer/sharer.php?u=${url}` target="_blank")
+                        img(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter')
+                    a(href=`https://twitter.com/share?url=${url}` target="_blank")
+                        img(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter')
+                    a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on ${brandName}: ${url}`, title='Share by Email')
+                        img(src='/images/email-share.jpg')
+
+
+
+                br
+                button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} \n\n${url}`)
+                    i.fa.fa-info.fw
+                    | Copy Details
+
+                button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName || upload.uploader.channelUrl} \n\n ${url} \n\n #${brandName}`)
+                    i.fa.fa-info.fw
+                    | With User Info
 
 
             br
@@ -260,51 +307,18 @@ block content
 
                     br
 
-
-            // SHARING BUTTONS
             div
-
-                a(href=`https://www.facebook.com/sharer/sharer.php?u=${url}` target="_blank")
-                    img(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter')
-                a(href=`https://twitter.com/share?url=${url}` target="_blank")
-                    img(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter')
-                a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on ${brandName}: ${url}`, title='Share by Email')
-                    img(src='/images/email-share.jpg')
-
-
-
-            br
-            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} \n\n${url}`)
-                i.fa.fa-info.fw
-                | Copy Details
-
-            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName || upload.uploader.channelUrl} \n\n ${url} \n\n #${brandName}`)
-                i.fa.fa-info.fw
-                | With User Info
-
-            //  REACTS WITH LIKES, DISLIKE, DISGUST, ETC
-            div.react(style="width:39%;background-color:white;margin:0 auto;border-radius:10px;margin-bottom:21px;margin-top:60px;padding-bottom:12px;max-width:453px;min-width:247px;")
-                // margin-top:133px
                 br
-                each emoji in emojis
-                    div(style="padding-right:15px;display:inline-block;")
-                        a(href="#")
-                            if currentReact
-                                if currentReact == emoji.name
-                                    div.clicked-emoji
-                                        img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
+                br
+                br
+                div.col-sm-12
+                    p #{upload.description}
 
-                                else
-                                    div.unclicked-emoji
-                                        img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
 
-                            else
-                                div.clicked-emoji
-                                    img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
 
-                        p.fw(class=emoji.name style="font-weight:400;") #{emoji.amount}
+            hr
 
-            // COMMENT SECTION AND FORM
+            // ** COMMENT SECTION AND FORM **
             div
                 br
                 br
@@ -418,12 +432,6 @@ block content
                                 else
                                     p No commenter
 
-            div
-                br
-                br
-                br
-                div.col-sm-12
-                    p #{upload.description}
 
 
 block extra_js
