--- a/views/media.pug
+++ b/views/media.pug
@@ -283,7 +283,7 @@ block content
 
             div.col-sm-12
 
-                p #{upload.description}
+                p.fw(style="font-size:18px") #{upload.description}
 
             hr
 
@@ -316,6 +316,8 @@ block content
                 if upload.visibility == 'pending' && upload.status !== 'processing'
                     h3.pending-string Your video is currently pending moderator approval. If it's still pending after several minutes please contact a mod at
                         a(href="/discord")  Discord
+
+            hr
 
             // ** COMMENT SECTION AND FORM **
             div
