--- a/views/media.pug
+++ b/views/media.pug
@@ -373,7 +373,7 @@ block content
                 div.col-sm-12
                     // otherwise display all comments
                     if commentCount == 0
-                        div.col-sm-12.comment-containing-div(style="width:400px;margin:0 auto;margin-top:70px;")
+                        div.comment-containing-div(style="width:400px;margin:0 auto;margin-top:70px;")
                             div(style="display:block")
                                 h3.fw.no-comments-header(style="text-decoration:underline;text-align:left;font-size:22px;") No Comments Yet
 
