one last thing to add

--- a/views/media.pug
+++ b/views/media.pug
@@ -344,7 +344,7 @@ block content
                 br
                 br
                 br
-                div.col-sm-12
+                div.col-sm-12(style="margin-top:50px")
                     if user
                         if !viewingUserIsBlocked
                             // comment form
