random functionality working

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -308,6 +308,11 @@ style.
     //    h7(style="font-size:15px") Upgrade
 
     if !user
+
+      a.signInAnchor(href="/random" style="background-color:white;right:121px;")
+        div.signInDiv(style="")
+          h7(style="display:inline-block;color:black;") Random
+
       a.signInAnchor(href="/login" style="background-color:white;")
         div.signInDiv(style="")
           h7(style="display:inline-block;color:black;") Sign in
