--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -309,9 +309,15 @@ style.
 
     if !user
 
+
       a.signInAnchor(href="/random" style="background-color:white;right:121px;")
-        div.signInDiv(style="")
-          h7(style="display:inline-block;color:black;") Random
+        img(src="/images/dice.png" style="height:40px;")
+
+
+
+      //a.signInAnchor(href="/random" style="background-color:white;right:121px;")
+      //  div.signInDiv(style="")
+      //    i.fas.fa-dice
 
       a.signInAnchor(href="/login" style="background-color:white;")
         div.signInDiv(style="")
