random dice working

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -272,7 +272,7 @@ style.
     padding-left: 56px;
   }
 
-  @media (max-width: 750px) {
+  @media (max-width: 927px) {
     .diceIcon {
       visibility: hidden;
     }
@@ -334,6 +334,10 @@ style.
 
 
     if user
+
+      a.diceIcon.signInAnchor(href="/random" style="background-color:white;right:212px;")
+        img(src="/images/dice.png" style="height:40px;")
+
       // BELL ICON
       //a(href="#" style="position: absolute;top: 19px;right: 280px;")
       //    img(src="/bell-angle.png" style="width:29px;display:inline-block;margin-left:15px;")
