--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -260,6 +260,11 @@ style.
         i.ib.i.fas.fa-clock
         p.ib &nbsp Recent - All Uploads
 
+    a(href='/random' style="")
+        i.ib.i.fas.fa-dice
+        p.ib &nbsp Random
+
+
     hr
     // turn off until implemented
     //.nightMode(style="white-space:nowrap")
