make dice smaller

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -319,8 +319,8 @@ style.
     if !user
 
 
-      a.diceIcon.signInAnchor(href="/random" style="background-color:white;right:121px;")
-        img(src="/images/dice.png" style="height:40px;")
+      a.diceIcon.signInAnchor(href="/random" style="right:121px;")
+        img(src="/images/dice.png" style="height:28px;margin-top:7px;")
 
 
 
@@ -335,8 +335,8 @@ style.
 
     if user
 
-      a.diceIcon.signInAnchor(href="/random" style="background-color:white;right:212px;")
-        img(src="/images/dice.png" style="height:40px;")
+      a.diceIcon.signInAnchor(href="/random" style="right:212px;")
+        img(src="/images/dice.png" style="height:28px;margin-top:7px")
 
       // BELL ICON
       //a(href="#" style="position: absolute;top: 19px;right: 280px;")
