--- a/views/media.pug
+++ b/views/media.pug
@@ -60,6 +60,15 @@ block content
             max-width: 100% !important;
         }
 
+        .reactImage {
+            width: 40px;
+            transition: all 0.2s ease-in-out;
+        }
+
+        .reactImage:hover {
+            transform: scale(1.3);
+        }
+
     br
     div.center-block.text-center.col-sm-12(style="overflow-x: hidden;margin-top:-21px;background-color:black;")
         if upload.status == 'processing'
@@ -223,15 +232,15 @@ block content
                                 if currentReact
                                     if currentReact == emoji.name
                                         div.clicked-emoji
-                                            img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
+                                            img.reactImage(id=emoji.name src='/emojis/' + emoji.name + '.jpg' )
 
                                     else
                                         div.unclicked-emoji
-                                            img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
+                                            img.reactImage(id=emoji.name src='/emojis/' + emoji.name + '.jpg' )
 
                                 else
                                     div.clicked-emoji
-                                        img(class=emoji.name src='/emojis/' + emoji.name + '.jpg' width="50px" )
+                                        img.reactImage(id=emoji.name src='/emojis/' + emoji.name + '.jpg' )
 
                             p.fw(class=emoji.name style="font-weight:400;") #{emoji.amount}
 
